--- a/Onliner for windows 10/Onliner for windows 10/Onliner for windows 10.csproj
+++ b/Onliner for windows 10/Onliner for windows 10/Onliner for windows 10.csproj
@@ -120,6 +120,7 @@
     <None Include="Onliner for windows 10_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Image\6tag_160815-221534.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
