--- a/Onliner for windows 10/Onliner for windows 10/project.json
+++ b/Onliner for windows 10/Onliner for windows 10/project.json
@@ -4,6 +4,7 @@
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.0.0",
     "Microsoft.ApplicationInsights.WindowsApps": "1.0.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "MyToolkit": "2.4.2",
     "Newtonsoft.Json": "7.0.1"
   },
   "frameworks": {
