--- a/Onliner for windows 10/Onliner for windows 10/project.json
+++ b/Onliner for windows 10/Onliner for windows 10/project.json
@@ -5,6 +5,7 @@
     "Microsoft.ApplicationInsights.WindowsApps": "1.0.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
     "MyToolkit": "2.4.2",
+    "MyToolkit.Extended": "2.4.2",
     "Newtonsoft.Json": "7.0.1"
   },
   "frameworks": {
