--- a/Onliner for windows 10/Onliner for windows 10/Onliner for windows 10.csproj
+++ b/Onliner for windows 10/Onliner for windows 10/Onliner for windows 10.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Model\CommentsItem.cs" />
     <Compile Include="Model\FullItemNews.cs" />
     <Compile Include="Model\ItemsNews.cs" />
+    <Compile Include="Model\LocalSetteing\LocalSettingParams.cs" />
     <Compile Include="Model\MessageJson.cs" />
     <Compile Include="ParsingHtml\ParsingHtml.cs" />
     <Compile Include="Tiles\DesignTimeData.cs" />
@@ -204,6 +205,7 @@
     <Content Include="Assets\LockScreenLogo.scale-100.png" />
     <Content Include="Assets\WeatherImage\A6.png" />
     <Content Include="ImageCollection\background.png" />
+    <Content Include="ImageCollection\default_avatar.png" />
     <Content Include="ImageCollection\logoApp.png" />
     <Content Include="ImageCollection\MainImageLogo.png" />
     <Content Include="Assets\SplashScreen.scale-100.png" />
@@ -216,7 +218,6 @@
     <Content Include="Assets\StoreLogo.scale-400.png" />
     <Content Include="Assets\Wide310x150Logo.scale-100.png" />
     <Content Include="ImageCollection\123.jpg" />
-    <Content Include="ImageCollection\6tag_160815-221534.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
