--- a/Onliner for windows 10/Onliner for windows 10/project.json
+++ b/Onliner for windows 10/Onliner for windows 10/project.json
@@ -1,13 +1,15 @@
 ﻿{
   "dependencies": {
     "HtmlAgilityPack": "1.4.9",
+    "Intense": "0.3.0",
     "Microsoft.ApplicationInsights": "1.0.0",
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.0.0",
     "Microsoft.ApplicationInsights.WindowsApps": "1.0.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
     "MyToolkit": "2.4.2",
     "MyToolkit.Extended": "2.4.2",
-    "Newtonsoft.Json": "7.0.1"
+    "Newtonsoft.Json": "7.0.1",
+    "Template10": "1.1.3"
   },
   "frameworks": {
     "uap10.0": {}
