--- a/Onliner for windows 10/Onliner for windows 10/project.json
+++ b/Onliner for windows 10/Onliner for windows 10/project.json
@@ -1,15 +1,14 @@
 ﻿{
   "dependencies": {
     "HtmlAgilityPack": "1.4.9",
-    "Intense": "0.3.0",
-    "Microsoft.ApplicationInsights": "1.0.0",
-    "Microsoft.ApplicationInsights.PersistenceChannel": "1.0.0",
-    "Microsoft.ApplicationInsights.WindowsApps": "1.0.0",
+    "Intense": "0.4.0",
+    "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "MyToolkit": "2.4.2",
-    "MyToolkit.Extended": "2.4.2",
-    "Newtonsoft.Json": "7.0.1",
-    "Template10": "1.1.3"
+    "MyToolkit": "2.5.11",
+    "MyToolkit.Extended": "2.5.11",
+    "Newtonsoft.Json": "8.0.2",
+    "SQLite.Net-PCL": "3.1.1",
+    "Template10": "1.1.8"
   },
   "frameworks": {
     "uap10.0": {}
