--- a/Onliner for windows 10/Onliner/Onliner.csproj
+++ b/Onliner for windows 10/Onliner/Onliner.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
     <Compile Include="Converters\ConvertToAjaxTime.cs" />
+    <Compile Include="Converters\DateTimeConverter\DateTimeToDateTimeOffsetConverter.cs" />
     <Compile Include="Converters\For Messages\JavaScriptTimeToSharp.cs" />
     <Compile Include="Converters\For Messages\UnreadVisibilityConverter.cs" />
     <Compile Include="Converters\ImageUrlConverter.cs" />
@@ -148,6 +149,7 @@
     <Compile Include="ParsingHtml\ParsingNewsSection.cs" />
     <Compile Include="ParsingHtml\ParsingSearchUserResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Setting\SettingParams.cs" />
     <Compile Include="SQLiteDataBase\SQLiteDB.cs" />
     <EmbeddedResource Include="Properties\Onliner.rd.xml" />
   </ItemGroup>
