--- a/Onliner for windows 10/Onliner for windows 10/Onliner for windows 10.csproj
+++ b/Onliner for windows 10/Onliner for windows 10/Onliner for windows 10.csproj
@@ -99,106 +99,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Files\likeTest.txt" />
-    <Content Include="Files\Weather\townWeather.txt" />
-    <None Include="Onliner for windows 10_StoreKey.pfx" />
-    <None Include="project.json" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Extensions.cs" />
-    <Compile Include="IsTypePresentStateTrigger.cs" />
-    <Compile Include="MainPage.xaml.cs">
-      <DependentUpon>MainPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Tiles\DesignTimeData.cs" />
-    <Compile Include="Tiles\LiveTileBuilder.cs" />
-    <Compile Include="Tiles\TileData.cs" />
-    <Compile Include="Tiles\TileTemplates\SquareTile.xaml.cs">
-      <DependentUpon>SquareTile.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Tiles\TileTemplates\WideTile.xaml.cs">
-      <DependentUpon>WideTile.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UserControls\CommentsContentViewer.xaml.cs">
-      <DependentUpon>CommentsContentViewer.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UserControls\MessegeSenderControl.xaml.cs">
-      <DependentUpon>MessegeSenderControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UserControls\SwipeableSplitView.cs" />
-    <Compile Include="UserControls\TabHeader\HeaderTab.cs" />
-    <Compile Include="UserControls\TabHeader\HorizontalStretchPanel.cs" />
-    <Compile Include="View-Model\MainPageViewModel.cs" />
-    <Compile Include="View-Model\MessagePageViewModel.cs" />
-    <Compile Include="View-Model\NewsSectionPageViewModel.cs" />
-    <Compile Include="View-Model\OpinionsViewModel.cs" />
-    <Compile Include="View-Model\ProfileViewModel.cs" />
-    <Compile Include="View-Model\ProfileViewModels\EditProfileViewModel.cs" />
-    <Compile Include="View-Model\ProfileViewModels\SearchUserViewModel.cs" />
-    <Compile Include="View-Model\Settings\SettingViewModel.cs" />
-    <Compile Include="View-Model\ShellViewModel.cs" />
-    <Compile Include="View-Model\ViewNewsPageViewModel.cs" />
-    <Compile Include="View-Model\WeatherViewModel.cs" />
-    <Compile Include="Views\Message\MessagePage.xaml.cs">
-      <DependentUpon>MessagePage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\testpage.xaml.cs">
-      <DependentUpon>testpage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UserControls\ImageLoader.xaml.cs">
-      <DependentUpon>ImageLoader.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UserControls\TabHeader.xaml.cs">
-      <DependentUpon>TabHeader.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UserControls\TextBlockFontSize.xaml.cs">
-      <DependentUpon>TextBlockFontSize.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UserControls\YouTubePlayerControl.xaml.cs">
-      <DependentUpon>YouTubePlayerControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\CatalogPage.xaml.cs">
-      <DependentUpon>CatalogPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\NewsSectionPage.xaml.cs">
-      <DependentUpon>NewsSectionPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\News\FavoriteNewsView.xaml.cs">
-      <DependentUpon>FavoriteNewsView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\ProfilePage.xaml.cs">
-      <DependentUpon>ProfilePage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\Profile\EditProfilePage.xaml.cs">
-      <DependentUpon>EditProfilePage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Profile\SearchUserPage.xaml.cs">
-      <DependentUpon>SearchUserPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Setting\SettingPage.xaml.cs">
-      <DependentUpon>SettingPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Shell.xaml.cs">
-      <DependentUpon>Shell.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\ViewNewsPage.xaml.cs">
-      <DependentUpon>ViewNewsPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\WeatherPage.xaml.cs">
-      <DependentUpon>WeatherPage.xaml</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <AppxManifest Include="Package.appxmanifest">
-      <SubType>Designer</SubType>
-    </AppxManifest>
-    <None Include="Onliner for windows 10_TemporaryKey.pfx" />
-  </ItemGroup>
-  <ItemGroup>
+    <Content Include="Assets\Logo.png" />
     <Content Include="Assets\NewStoreLogo.scale-100.png" />
     <Content Include="Assets\NewStoreLogo.scale-125.png" />
     <Content Include="Assets\NewStoreLogo.scale-150.png" />
@@ -239,12 +140,116 @@
     <Content Include="Assets\Square71x71Logo.scale-150.png" />
     <Content Include="Assets\Square71x71Logo.scale-200.png" />
     <Content Include="Assets\Square71x71Logo.scale-400.png" />
-    <Content Include="Assets\WeatherImage\A6.png" />
     <Content Include="Assets\Wide310x150Logo.scale-100.png" />
     <Content Include="Assets\Wide310x150Logo.scale-125.png" />
     <Content Include="Assets\Wide310x150Logo.scale-150.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
+    <Content Include="Files\likeTest.txt" />
+    <Content Include="Files\Weather\townWeather.txt" />
+    <None Include="Onliner for windows 10_StoreKey.pfx" />
+    <None Include="project.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="App.xaml.cs">
+      <DependentUpon>App.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Extensions.cs" />
+    <Compile Include="IsTypePresentStateTrigger.cs" />
+    <Compile Include="MainPage.xaml.cs">
+      <DependentUpon>MainPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PrivacyPolicy.xaml.cs">
+      <DependentUpon>PrivacyPolicy.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Tiles\DesignTimeData.cs" />
+    <Compile Include="Tiles\LiveTileBuilder.cs" />
+    <Compile Include="Tiles\TileData.cs" />
+    <Compile Include="Tiles\TileTemplates\SquareTile.xaml.cs">
+      <DependentUpon>SquareTile.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Tiles\TileTemplates\WideTile.xaml.cs">
+      <DependentUpon>WideTile.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\CommentsContentViewer.xaml.cs">
+      <DependentUpon>CommentsContentViewer.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\MessegeSenderControl.xaml.cs">
+      <DependentUpon>MessegeSenderControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\SP\INavigationMenuItem.cs" />
+    <Compile Include="UserControls\SP\NavMenuListView.cs" />
+    <Compile Include="UserControls\SP\SimpleNavMenuItem.cs" />
+    <Compile Include="UserControls\SP\SplitViewMenu.cs" />
+    <Compile Include="UserControls\SwipeableSplitView.cs" />
+    <Compile Include="UserControls\TabHeader\HeaderTab.cs" />
+    <Compile Include="UserControls\TabHeader\HorizontalStretchPanel.cs" />
+    <Compile Include="View-Model\MainPageViewModel.cs" />
+    <Compile Include="View-Model\MessagePageViewModel.cs" />
+    <Compile Include="View-Model\NewsSectionPageViewModel.cs" />
+    <Compile Include="View-Model\OpinionsViewModel.cs" />
+    <Compile Include="View-Model\ProfileViewModel.cs" />
+    <Compile Include="View-Model\ProfileViewModels\EditProfileViewModel.cs" />
+    <Compile Include="View-Model\ProfileViewModels\SearchUserViewModel.cs" />
+    <Compile Include="View-Model\Settings\SettingViewModel.cs" />
+    <Compile Include="View-Model\ShellViewModel.cs" />
+    <Compile Include="View-Model\ViewNewsPageViewModel.cs" />
+    <Compile Include="View-Model\WeatherViewModel.cs" />
+    <Compile Include="Views\Message\MessagePage.xaml.cs">
+      <DependentUpon>MessagePage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\testpage.xaml.cs">
+      <DependentUpon>testpage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\ImageLoader.xaml.cs">
+      <DependentUpon>ImageLoader.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\TabHeader.xaml.cs">
+      <DependentUpon>TabHeader.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\TextBlockFontSize.xaml.cs">
+      <DependentUpon>TextBlockFontSize.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\YouTubePlayerControl.xaml.cs">
+      <DependentUpon>YouTubePlayerControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\NewsSectionPage.xaml.cs">
+      <DependentUpon>NewsSectionPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\News\FavoriteNewsView.xaml.cs">
+      <DependentUpon>FavoriteNewsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ProfilePage.xaml.cs">
+      <DependentUpon>ProfilePage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\Profile\EditProfilePage.xaml.cs">
+      <DependentUpon>EditProfilePage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Profile\SearchUserPage.xaml.cs">
+      <DependentUpon>SearchUserPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Setting\SettingPage.xaml.cs">
+      <DependentUpon>SettingPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Shell.xaml.cs">
+      <DependentUpon>Shell.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ViewNewsPage.xaml.cs">
+      <DependentUpon>ViewNewsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\WeatherPage.xaml.cs">
+      <DependentUpon>WeatherPage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <AppxManifest Include="Package.appxmanifest">
+      <SubType>Designer</SubType>
+    </AppxManifest>
+    <None Include="Onliner for windows 10_TemporaryKey.pfx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\WeatherImage\A6.png" />
     <Content Include="ImageCollection\background.png" />
     <Content Include="ImageCollection\default_avatar.png" />
     <Content Include="ImageCollection\logoApp.png" />
@@ -261,6 +266,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="PrivacyPolicy.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Themes\ContolsStyle.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -272,6 +281,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Page>
     <Page Include="Themes\ListViewThemeStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Page>
+    <Page Include="Themes\SplitViewThemes.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -327,10 +341,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\YouTubePlayerControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\CatalogPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
